--- a/index.html
+++ b/index.html
@@ -141,7 +141,13 @@
         <script src="js/nouislider.min.js"></script>
         <script src="js/wNumb.js"></script>
         <script src="data/Mesclado_1.js"></script>
-
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+    
+            gtag('config', 'G-JB94PX2JPN');
+        </script>    
         <script type="text/javascript">
             $(document).ready(function() {
                 var data = json_Mesclado_1.features;
@@ -207,13 +213,6 @@
         </script>
         
 
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-MJ6K26BC57');
-        </script>
 
         <script>
         var highlightLayer;
