--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         <script src="js/nouislider.min.js"></script>
         <script src="js/wNumb.js"></script>
         <script src="data/Mesclado_1.js"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JB94PX2JPN"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
