--- a/index.html
+++ b/index.html
@@ -56,36 +56,29 @@
             overflow: hidden;
             left: 90%;
         }
-
-
         #toggle-button {
-            position: fixed; /* Para fixar na tela */
-            top: 20px; /* Distância do topo */
-            right: 20px; /* Distância do lado direito */
+            position: fixed;
+            top: 20px;
+            right: 20px;
             background-color: #007bff;
             color: white;
             border: none;
             padding: 10px 20px;
             cursor: pointer;
             border-radius: 5px;
-            z-index: 1100; /* Para garantir que o botão fique acima da tabela */
+            z-index: 1100; 
         }
-
-
-        /* Ajustar a tabela DataTables */
         table.display {
             width: 100%;
             border-collapse: collapse;
-            font-family: 'Calibri', sans-serif;  /* Definindo a fonte como Calibri */
-            font-size: 11px;  /* Definindo o tamanho da fonte como 10px */
+            font-family: 'Calibri', sans-serif;  
+            font-size: 11px;  
         }
-
         table.display th, table.display td {
             padding: 8px;
             text-align: left;
             border: 1px solid #ddd;
         }
-
         table.display th {
             background-color: #f2f2f2;
         }
@@ -93,7 +86,6 @@
         font-family: 'Calibri', sans-serif; 
         font-size: 11px;
         }
-
         .dataTables_filter label,
         .dataTables_length label,
         .dataTables_info,
@@ -175,7 +167,7 @@
 
                 $('#sectors-table thead th').each(function () {
                     var title = $(this).text();
-                    $(this).html('<input type="text" style="width: 70px;" placeholder="' + title + '" />');
+                    $(this).html('<input type="text" style="width: 101px;" placeholder="'+ title +'" />');
                 });
 
                 var table = $('#sectors-table').DataTable({
@@ -184,20 +176,7 @@
                     scrollCollapse: true,
                     paging: false,
                     fixedColumns: true,
-                    dom: 't', 
-                    language: {
-                        "sEmptyTable": "Nenhum dado disponível na tabela",
-                        "sInfo": "Mostrando _START_ até _END_ de _TOTAL_ registros",
-                        "sInfoEmpty": "Mostrando 0 até 0 de 0 registros",
-                        "sInfoFiltered": "(filtrado de _MAX_ registros no total)",
-                        "sZeroRecords": "Nenhum registro encontrado",
-                        "oPaginate": {
-                            "sFirst": "Primeiro",
-                            "sLast": "Último",
-                            "sNext": "Próximo",
-                            "sPrevious": "Anterior"
-                        }
-                    }
+                    dom: 't'
                 });
 
                 table.columns().every(function() {
