--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             position: absolute;
             top: 65px; 
             left: 48%; 
-            width: 50%;
+            /* width: 50%; */
             /* height: 62%; */
             background-color: rgba(255, 255, 255, 0.8);
             padding: 10px;
