--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
         #table-container {
-            position: absolute;
+            position: fixed;
             top: 65px; 
-            left: 48%; 
-            /* width: 50%; */
+            right: 10px; 
+            width: 50%;
             /* height: 62%; */
             background-color: rgba(255, 255, 255, 0.8);
             padding: 10px;
@@ -174,9 +174,10 @@
                     scrollY: '300px',
                     scrollX: true,
                     scrollCollapse: true,
-                    paging: false,
+                    paging: true,
                     fixedColumns: true,
-                    dom: 't'
+                    dom: 't',
+                    responsive: true
                 });
 
                 table.columns().every(function() {
