--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             position: fixed;
             top: 65px; 
             right: 20px; 
-            width: 50%;
+            /* width: 50%; */
             /* height: 62%; */
             background-color: rgba(255, 255, 255, 0.8);
             padding: 10px;
@@ -174,7 +174,7 @@
                     scrollY: '300px',
                     scrollX: true,
                     scrollCollapse: true,
-                    paging: true,
+                    paging: false,
                     fixedColumns: true,
                     dom: 't',
                     responsive: true
