ATT SFS AT 2024

--- a/index.html
+++ b/index.html
@@ -3911,7 +3911,7 @@
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
-                            color: 'rgba(13,216,101,1.0)',
+                            color: 'rgba(207,7,217,1.0)',
                             dashArray: '',
                             lineCap: 'square',
                             lineJoin: 'bevel',
@@ -3989,7 +3989,7 @@
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
-                            color: 'rgba(195,213,63,1.0)',
+                            color: 'rgba(395,213,63,1.0)',
                             dashArray: '',
                             lineCap: 'square',
                             lineJoin: 'bevel',
@@ -4964,7 +4964,20 @@
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
-                            color: 'rgba(205,203,85,1.0)',
+                            color: 'rgba(15,255,177,0.8)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                    case 'P01a':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(0,255,61,0.8)',
                             dashArray: '',
                             lineCap: 'square',
                             lineJoin: 'bevel',
@@ -6030,7 +6043,7 @@
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
-                            color: 'rgba(86,159,218,1.0)',
+                            color: 'rgba(223,230,11,1.0)',
                             dashArray: '',
                             lineCap: 'square',
                             lineJoin: 'bevel',
@@ -6160,7 +6173,7 @@
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
-                            color: 'rgba(162,24,231,1.0)',
+                            color: 'rgba(255,0,125,0.8)',
                             dashArray: '',
                             lineCap: 'square',
                             lineJoin: 'bevel',
@@ -6238,7 +6251,7 @@
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
-                            color: 'rgba(207,203,75,1.0)',
+                            color: 'rgba(239,141,125,0.8)',
                             dashArray: '',
                             lineCap: 'square',
                             lineJoin: 'bevel',
