sta. cecilia e erval velho

--- a/index.html
+++ b/index.html
@@ -4245,6 +4245,19 @@
                             interactive: true,
                     }
                     break;
+                    case 'TQS':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(113,19,208,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
                 case 'M17':
                     return {
                         pane: 'pane_Mesclado_1',
@@ -4271,6 +4284,19 @@
                             interactive: true,
                     }
                     break;
+                    case 'SQS':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(129,232,17,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
                 case 'M19':
                     return {
                         pane: 'pane_Mesclado_1',
@@ -4285,6 +4311,19 @@
                     }
                     break;
                 case 'M2':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(233,42,16,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                    case 'SS':
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
