--- a/index.html
+++ b/index.html
@@ -5207,6 +5207,19 @@
                             interactive: true,
                     }
                     break;
+                case '15':
+                return {
+                    pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(35,205,75,1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                }
+                break;
                 case 'N15':
                     return {
                         pane: 'pane_Mesclado_1',
@@ -5233,6 +5246,21 @@
                             interactive: true,
                     }
                     break;
+
+                case '15b':
+                return {
+                    pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(215,63,13,1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                }
+                break;
+                    
                 case 'N2':
                     return {
                         pane: 'pane_Mesclado_1',
@@ -5247,6 +5275,19 @@
                     }
                     break;
                 case 'N3':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(119,203,206,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                    case '65b':
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
@@ -5312,6 +5353,19 @@
                     }
                     break;
                 case 'RSU01':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(209,39,78,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case '65c':
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
