--- a/index.html
+++ b/index.html
@@ -4908,6 +4908,169 @@
                             interactive: true,
                     }
                     break;
+
+
+
+                    case 'SN 01':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(179,59,227,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case 'SN 02':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(217,177,56,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case 'SN 03':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(177,84,239,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case 'SN 04':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(78,222,17,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case 'SN 05':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(29,219,58,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+
+
+                    case 'SN 06':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(39,204,193,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case 'SN 07':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(48,41,233,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case 'SN 08':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(186,104,202,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case 'SN 09':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(124,215,210,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case 'SN 10':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(106,201,190,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case 'SN 11':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(15,105,209,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+                case 'SN 12':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(66,221,105,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+
+                    
                 case 'N02b':
                     return {
                         pane: 'pane_Mesclado_1',
@@ -5012,7 +5175,7 @@
                             interactive: true,
                     }
                     break;
-                    case 'P01a':
+                case 'P01a':
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
