--- a/index.html
+++ b/index.html
@@ -5970,24 +5970,11 @@
                             interactive: true,
                     }
                     break;
-                case 'SM 16':
-                    return {
-                        pane: 'pane_Mesclado_1',
-                            opacity: 1,
-                            color: 'rgba(230,219,72,1.0)',
-                            dashArray: '',
-                            lineCap: 'square',
-                            lineJoin: 'bevel',
-                            weight: 7.0,
-                            fillOpacity: 0,
-                            interactive: true,
-                    }
-                    break;
                 case 'SM 17':
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
-                            color: 'rgba(220,209,52,1.0)',
+                            color: 'rgba(98,209,100,1.0)',
                             dashArray: '',
                             lineCap: 'square',
                             lineJoin: 'bevel',
@@ -6204,6 +6191,20 @@
                             interactive: true,
                     }
                     break;
+                    
+                case 'SM 14':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(201,46,221,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
                 case 'T-02':
                     return {
                         pane: 'pane_Mesclado_1',
@@ -6217,7 +6218,34 @@
                             interactive: true,
                     }
                     break;
+                case 'ST 18':
+                return {
+                    pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(98,206,139,1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                }
+                break;
                 case 'T-03':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(19,182,204,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
+
+                    case 'SM 16':
                     return {
                         pane: 'pane_Mesclado_1',
                             opacity: 1,
