--- a/index.html
+++ b/index.html
@@ -5970,6 +5970,19 @@
                             interactive: true,
                     }
                     break;
+                    case 'SM 01':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                            opacity: 1,
+                            color: 'rgba(169,86,130,1.0)',
+                            dashArray: '',
+                            lineCap: 'square',
+                            lineJoin: 'bevel',
+                            weight: 3.0,
+                            fillOpacity: 0,
+                            interactive: true,
+                    }
+                    break;
                 case 'SM 17':
                     return {
                         pane: 'pane_Mesclado_1',
